--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "export": "next export",
     "lint": "next lint",
-    "deploy": "next build && next export && touch out/.static && cd out && rm -rf .git && git init && git add . && git commit -m 'deploy' && git push dokku@prod10:turk2023-front master:master --force"
+    "deploy": "git push dokku@prod10:turk2023-front master:master --force"
   },
   "dependencies": {
     "@types/node": "20.1.5",
