--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "export": "next export",
     "lint": "next lint",
-    "deploy": "git push dokku@prod10:turk2023-front master:master --force"
+    "deploy": "git push dokku@prod10:turk2023-front main:master --force"
   },
   "dependencies": {
     "@types/node": "20.1.5",
