--- a/api/package.json
+++ b/api/package.json
@@ -3,8 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "deploy": "rm -rf .git && git init && git add . && git commit -m 'deploy' && git push dokku@prod10:turk2023-api --force"
+  },
   "dependencies": {
     "axios": "^1.4.0",
+    "express": "^4.18.2",
+    "express-redis-cache": "^1.1.3",
     "node-fetch": "^3.3.1",
     "openai": "^3.2.1"
   }
