--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "deploy": "rm -rf .git && git init && git add . && git commit -m 'deploy' && git push dokku@prod10:turk2023-api --force"
+    "deploy": "rm -rf .git && git init && git add . && git commit -m 'deploy' && git push dokku@prod10:turk2023-api master:master --force && rm -rf .git"
   },
   "dependencies": {
     "axios": "^1.4.0",
