--- a/front/package.json
+++ b/front/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "rm -rf .git && git init && git add . && git commit -m 'deploy' && git push dokku@prod10:turk2023-front master:master --force && rm -rf .git"
+    "deploy": "rm -rf .git && git init && git add . && git commit -m 'deploy' && git push dokku@prod10:turk2023-front master:master --force && rm -rf .git",
+    "deploy:sepolia": "rm -rf .git && git init && git add . && git commit -m 'deploy' && git push dokku@prod10:turk2023-front-sepolia master:master --force && rm -rf .git"
   },
   "dependencies": {
     "@types/node": "20.1.5",
