--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
+    "dev:redis:": "docker run --name some-redis -p 6379:6379 redis",
     "deploy": "rm -rf .git && git init && git add . && git commit -m 'deploy' && git push dokku@prod10:turk2023-api master:master --force && rm -rf .git"
   },
   "dependencies": {
