--- a/api/package.json
+++ b/api/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "dev:redis:": "docker run --name some-redis -p 6379:6379 redis",
+    "dev:redis": "docker run --name some-redis -p 6379:6379 redis",
     "deploy": "rm -rf .git && git init && git add . && git commit -m 'deploy' && git push dokku@prod10:turk2023-api master:master --force && rm -rf .git"
   },
   "dependencies": {
     "axios": "^1.4.0",
     "express": "^4.18.2",
     "express-redis-cache": "^1.1.3",
+    "jsdom": "^22.0.0",
     "node-fetch": "^3.3.1",
     "openai": "^3.2.1"
   }
