--- a/api/package.json
+++ b/api/package.json
@@ -13,8 +13,6 @@
     "axios": "^1.4.0",
     "express": "^4.18.2",
     "express-redis-cache": "^1.1.3",
-    "jsdom": "^22.0.0",
-    "node-fetch": "^3.3.1",
-    "openai": "^3.2.1"
+    "node-fetch": "^3.3.1"
   }
 }
